edit doc + add droppedLines
