# components-registry-service-server/src/main/resources/openapi/v4.json
@@ -2644,6 +2644,10 @@
             "format" : "int32",
             "type" : "integer"
           },
+          "dropped_lines" : {
+            "format" : "int32",
+            "type" : "integer"
+          },
           "errors" : {
             "items" : {
               "type" : "string"
@@ -2673,6 +2677,7 @@
         },
         "required" : [
           "ambiguous_auto_resolved",
+          "dropped_lines",
           "errors",
           "scanned",
           "skipped_ambiguous",
